--- a/package.json
+++ b/package.json
@@ -18,14 +18,18 @@
     "type": "",
     "url": ""
   },
+  "peerDependencies": {
+    "@fortawesome/fontawesome": ">=1.1.7",
+    "aurelia-framework": "^1.2.0",
+    "aurelia-pal": "^1.8.0"
+  },
   "dependencies": {
+    "aurelia-validation": "^1.1.3"
+  },
+  "devDependencies": {
     "@fortawesome/fontawesome": ">=1.1.7",
     "aurelia-framework": "^1.2.0",
     "aurelia-pal": "^1.8.0",
-    "aurelia-validation": "^1.1.3",
-    "humps": "^2.0.1"
-  },
-  "devDependencies": {
     "aurelia-tools": "^1.0.0",
     "babel-eslint": "^7.1.1",
     "babel-plugin-syntax-flow": "^6.18.0",
